# opencv_play

./: .gitignore
course/: README.md  background_remover.py  color_picker.py  number_recognition.py  requirements.txt  run.sh  start_bot
custom_lab1/untitled/: CMakeLists.txt
custom_lab1/untitled/src/: main.cpp  src.cmake
custom_lab1/untitled/src/blob/: blob.cmake  blob.cpp  blob.h
custom_lab1/untitled/src/player/: player.cmake  player.cpp  player.h
docs/: .~lock.tomilin_course.odt#  tomilin_course.docx  tomilin_course.odt
lab1/: glad.txt
lab11/: morph.py
lab11/untitled/: CMakeLists.txt  main.cpp
lab12/: run.sh
lab12/untitled/: main.cpp
lab13/: parallel_processing
lab14/: CMakeLists.txt  build.sh  main.cpp  start.sh
lab15/: transforms.trf  video_stabilizer
lab18/: color_counter  detect_color.py
lab18/untitled/: main.cpp
lab3/build-untitled-Desktop_Qt_6_1_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake  untitled
lab3/build-untitled-Desktop_Qt_6_1_2_GCC_64bit-Debug/.cmake/api/v1/reply/: cmakeFiles-v1-524aa1bf8ffc6630daed.json  codemodel-v2-c4a94b687a27177b7bd5.json  index-2022-09-30T21-35-31-0878.json  target-untitled-Debug-d1c4bb17a27769318574.json
lab3/build-untitled-Desktop_Qt_6_1_2_GCC_64bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-265f8c38c14322f20db1.json  codemodel-v2-9d60aaa2ae44370db856.json  index-2022-09-30T21-35-05-0898.json  target-untitled-Debug-1545ed1abc7bfbd06426.json
lab3/untitled/: main.cpp
lab4/untitled/: main.cpp
lab5/: butterworth_filter.py  template_matching.py
lab5/untitled/: main.cpp
lab7/untitled/: main.cpp
lab8/untitled/: main.cpp
lab9/untitled/: CMakeLists.txt  main.cpp
